--- a/Application p5/Blob detection phase 2/vida/examples/style.css
+++ b/Application p5/Blob detection phase 2/vida/examples/style.css
@@ -2,12 +2,12 @@
 
 
 html{
-
 	background: rgb(253,254,252);
 	background: linear-gradient(180deg, rgba(253,254,252,1) 0%, rgba(255,255,255,1) 92%, rgba(0,0,0,1) 99%);
 }
 
 body { 
+	
 	font-family: 'Roboto Mono', monospace;
 
   /* background:black; */
@@ -71,6 +71,13 @@ margin-top: -100px;
 	transform: translate(-100%, 0);
 }}
 
-
+.sketch-holder {
+	position:absolute;
+	top:0;
+	left:0;
+	width:30%;
+	height:30%;
+	z-index:-1;
+}
 
 
