--- a/Application p5/Blob detection phase 2/vida/examples/style.css
+++ b/Application p5/Blob detection phase 2/vida/examples/style.css
@@ -113,3 +113,22 @@ margin-top: -100px;
 	width: 100%;
 	height: 100%;
 }
+
+.container .line {
+	display: flex;
+}
+
+.container .column {
+	width: 100%;
+}
+
+.container {
+	position: fixed;
+    width: calc(100% - 48px);
+    top: 80px;
+    height: calc(100% - 300px);
+    overflow: scroll;
+    z-index: 100000;
+    left: 50%;
+    transform: translate(-50%);
+}
